manifests/feed.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed
  labels:
    app: feed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
  template:
    metadata:
      labels:
        app: feed
    spec:
      containers:
        - name: feed
          image: rusty-graph-feed
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: feed
  annotations:
    gateway.chrismiller.xyz/port: "8000"
spec:
  selector:
    app: feed
  ports:
    - protocol: TCP
      port: 8000
