manifests/profile.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  labels:
    app: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: rusty-graph-profile
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: profile
spec:
  selector:
    app: profile
  ports:
    - protocol: TCP
      port: 8080
